src/user.css
/* ... */
* {
  font-family: 'Segoe UI Variable Display', 'Segoe UI Variable Text',
      'Segoe UI', 'Microsoft Ya Hei', sans-serif !important;
  /* font-family: 'Segoe UI Variable Display','Segoe UI Variable Text', 'Microsoft Ya Hei', sans-serif !important; */
  line-height: normal;
  box-shadow: none !important;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  -webkit-mask-size: contain;
}

/* Fix Overflow off Screen */
html {
  max-width: 100vw;
  max-height: 100vh;
  overflow: hidden;
}

.ButtonInner-medium-iconOnly {
  --background-highlight: var(--spice-accent);
  --background-press: var(--spice-accent);
  min-inline-size: 32px;
  min-block-size: 32px;
  inline-size: 32px;
  block-size: 32px;
}

.encore-light-theme {
  --background-base: var(--spice-main);
  --text-base: var(--spice-text);
}

.Root__main-view {
  z-index: 0;
  background-color: var(--spice-main);
  height: 100%;
}

.os-scrollbar {
  cursor: pointer;
  display: var(--scrollbars);
}

.os-scrollbar-handle {
  border-radius: 99px !important;
  background: var(--spice-subtext) !important;
}

.os-scrollbar-vertical {
  width: 4px !important;
  margin-right: 5px;
  transition: width 150ms ease !important;
}

.os-scrollbar-vertical:hover,
.os-scrollbar-vertical:active {
  width: 5px !important;
}

.os-scrollbar-horizontal {
  display: none;
}

.contentSpacing {
  max-width: 100vw !important;
}

.main-home-homeHeader,
.main-actionBarBackground-background {
  background-image: none;
}

.main-actionBarBackground-background,
.main-home-homeHeader,
.x-entityHeader-overlay,
.x-actionBarBackground-background {
  background-color: var(--spice-main) !important;
}

.main-topBar-overlay {
  opacity: 0 !important;
}

.main-entityHeader-overlay {
  background-image: linear-gradient(
      to bottom,
      rgb(39 39 39 / 0%),
      var(--spice-main)
  );
}

.x-actionBarBackground-background,
.x-entityHeader-overlay,
.main-actionBarBackground-background {
  background: none !important;
}

/* remove dividers */

.main-trackList-trackListHeaderRow,
.main-trackCreditsModal-header {
  background-color: var(--spice-card);
  border-bottom: none;
}

.now-playing-bar-container,
._6e96ad0ba78d75ffb2a0156aa1834a21-scss {
  border-top: none;
}

.main-rootlist-rootlistDivider,
.main-contextMenu-dividerBefore::before,
.main-contextMenu-dividerAfter::after,
.show-episodeList-divider,
.main-rootlist-rootlistDividerContainer {
  display: none;
}

/* cards */

.main-shelf-shelf {
  margin-bottom: 0;
}

.main-shelf-shelfGrid {
  overflow-y: visible !important;
  margin-bottom: 16px;
}

.main-cardImage-image,
.main-cardImage-imageWrapper,
.main-card-card img {
  border-radius: var(--border-radius-2);
}

.main-card-card,
.x-heroCategoryCard-HeroCategoryCard,
.x-categoryCard-CategoryCard,
.x-categoryCard-image,
.main-heroCard-card,
.view-homeShortcutsGrid-draggable {
  border-radius: var(--border-radius-1);
}

.main-card-card:hover,
.x-categoryCard-CategoryCard:hover,
.main-heroCard-card:hover {
  transform: translateY(-3px);
  box-shadow: 0 4px 16px rgba(var(--spice-rgb-layer-shadow), 0.5) !important;
}

.main-card-card:hover::after,
.x-categoryCard-CategoryCard:hover::after,
.main-heroCard-card:hover::after {
  transform: translateY(0px);
}

.main-card-card:active,
.x-categoryCard-CategoryCard:active,
.main-heroCard-card:active {
  transform: translateY(0px);
}

.x-categoryCard-backdrop {
  position: absolute;
  width: 100%;
  height: 100%;
  filter: blur(60px);
  background-size: cover;
  background-blend-mode: luminosity;
  opacity: 0;
  animation: scale-in 750ms ease-out forwards;
  transform-origin: center center;
}

@keyframes scale-in {
  from {
      opacity: 0;
      transform: scale(0);
  }

  to {
      opacity: 1;
      transform: scale(1);
  }
}

.view-homeShortcutsGrid-shortcut {
  background: transparent;
  overflow: unset;
}

.x-searchResultsTracks-root > .main-gridContainer-gridContainer,
.main-trackList-trackList,
.main-card-card,
.main-heroCard-card,
.view-homeShortcutsGrid-draggable {
  background-color: var(--spice-card);
  border: 1px var(--spice-contour) solid;
}

.main-tag-container {
  font-weight: 400;
  font-size: 10px;
  color: var(--spice-alt-text) !important;
  background-color: var(--spice-accent);
}

.main-heroCardTag-root {
  height: 24px;
  padding: 12px;
  margin-top: 8px;
}

.x-categoryCard-title,
.x-heroCategoryCard-heroTitle,
.collection-collectionEntityHeroCard-likedSongs div {
  color: white;
}

/* transitions */

/* .main-card-card {
  transition: background-color 150ms ease;
} */

.main-card-card,
.x-categoryCard-CategoryCard,
.main-heroCard-card {
  transition: transform 400ms var(--ms-motion-timing-decelerate),
      box-shadow 400ms var(--ms-motion-timing-decelerate);
}

.link-subtle {
  transition-duration: 150ms;
}

/* headers */

[dir='ltr'] .queue-tabBar-header,
.marketplace-tabBar-nav {
  text-align: center !important;
}

.lyrics-tabBar-header {
  justify-content: center;
}

.spotify__os--is-windows .main-topBar-container {
  padding-inline-end: 167px !important;
  padding-inline-start: 80px !important;
}

.Root__top-container:not(:has(.main-topBar-container)) .Root__main-view::after {
  content: '';
  top: -64px;
  left: calc(var(--left-sidebar-width) * -1);
  position: absolute;
  width: 100vw;
  height: 64px;
  z-index: 1;
  background-color: rgba(var(--spice-rgb-sidebar), 0.85);
  backdrop-filter: blur(50px) saturate(2.5);
}

.Root__top-container:has(.lyrics-lyrics-container)
  .main-topBar-topbarContentWrapper {
  display: none !important;
}

.Root__main-view .main-topBar-container {
  margin-left: calc(var(--left-sidebar-width) * -1) !important;
  margin-top: calc(-24px + var(--panel-gap) * -2);
  height: calc(24px + var(--panel-gap) * 2);
}

.main-topBar-container {
  position: absolute !important;
  width: 100vw !important;
  z-index: 5 !important;
  padding: 0;
}
/* ... */

